# Algorithms_TP_2024

./: .gitignore  README.md
2_3/: 2_3  2_3.cpp
3_3/: main  main.cpp
4-2/: main  main.cpp
5-3/: main  main.cpp
6-4/: main  main.cpp
Graphs_task1/: ArcGraph.cpp  ArcGraph.h  CMakeLists.txt  IGraph.cpp  IGraph.h  ListGraph.cpp  ListGraph.h  MatrixGraph.cpp  MatrixGraph.h  SetGraph.cpp  SetGraph.h  main.cpp
Module2/AVLTree/: avltree  avltree.cpp  main  main.cpp  main_test  main_test.cpp
Module2/BTree/: btree  btree.cpp  btree_test.cpp
Module2/BinaryTree/: main  main.cpp  main_test  main_test.cpp
Module2/HashTable/: HashTable.cpp  main  main.cpp  main_test  main_test.cpp
Module3/Task2/: main  main.cpp
Module3/Task3/: main  main.cpp
dynamic_array/: main  main.cpp
stack/: main  main.cpp
